@@ -11,6 +11,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 public class UserDao implements Dao<User> {
 
@@ -78,7 +79,7 @@ public class UserDao implements Dao<User> {
 
     @Override
     public List<User> getBy(Predicate<User> predicate) {
-        return getAll().stream().filter(predicate).toList();
+        return getAll().stream().filter(predicate).collect(Collectors.toList());
     }
 
     @Override
